<resources>
    <string name="app_name">Get Together</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Enter a valid email</string>
    <string name="invalid_password">Password must be longer than 5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="back_button">BACK</string>
    <string name="enter_message">Enter Message</string>
    <string name="message">MESSAGE</string>
    <string name="send_button">SEND</string>
    <string name="search_button">SEARCH</string>
    <string name="search_hint">  Search</string>
    <string name="add_button">ADD FRIEND</string>
    <string name="remove_button">REMOVE FRIEND</string>
    <string name="profile_button">PROFILE</string>
    <string name="post_button">POST</string>
    <string name="home_button">HOME</string>
    <string name="SMS_button">SMS"</string>
    <string name="generic_message">This is my message</string>
    <string name="account_info">Account Information</string>
    <string name="github_link">Github Link</string>
    <string name="submit">SUBMIT</string>
    <string name="college_email">College Email (if applicable)</string>
    <string name="bio">Add Bio</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="display">Display Your Info</string>
    <string name="hide">Hide Your Info</string>
    <string name="copy">Copy To Clipboard</string>
    <string name="sign_out">Sign Out</string>
    <string name="update_pass">Update Password</string>
    <string name="about">About the Project</string>
    <string name="latest">Latest Release</string>
    <string name="help_and_info">Help and Information</string>
    <string name="change_user">Change Username</string>
    <string name="profile_pic">Upload Profile Pic</string>
    <string name="open_camera">Open Camera</string>
    <string name="post_from_camera">Post From Camera Roll</string>
    <string name="username">username</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="new_message">New Message</string>
    <string name="friends_list">Friends List</string>
    <string name="no_request">No Pending Friend Requests</string>
    <string name="no_friends">Try Searching and Adding Friends</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="not_a_robot">Not a robot?</string>


</resources>