<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#131111"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.PostActivity">

    <Button
        android:id="@+id/Camera"
        android:layout_width="405dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/open_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/Gallery"
        app:layout_constraintVertical_bias="0.079" />

    <Button
        android:id="@+id/Gallery"
        android:layout_width="405dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/post_from_camera"
        app:layout_constraintBottom_toTopOf="@+id/imageview1"
        app:layout_constraintEnd_toEndOf="@id/Camera"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <ImageView
        android:id="@+id/imageview1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="240dp"
        android:text="@string/profile_button"
        android:translationY="-60dp"
        app:layout_constraintLeft_toRightOf="@id/home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/home"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/post_button"
        android:translationY="620dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/home" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="680dp"
        android:text="@string/search_button"
        android:translationY="-60dp"
        app:layout_constraintEnd_toStartOf="@id/home"
        app:layout_constraintStart_toEndOf="@id/post"
        app:layout_constraintTop_toTopOf="@id/post"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="680dp"
        android:text="@string/home_button"
        android:translationY="-60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/post" />

    <Button
        android:id="@+id/sms"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/SMS_button"
        android:translationX="-6dp"
        android:translationY="-60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profile"
        app:layout_constraintTop_toTopOf="@id/profile" />
</androidx.constraintlayout.widget.ConstraintLayout>