<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".smsPage.LatestMessagesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#2B2B2B"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="410dp"
        android:layout_height="677dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar5" />

    <Button
        android:id="@+id/profile"
        android:layout_width="137dp"
        android:layout_height="55dp"
        android:text="@string/profile_button"
        tools:ignore="MissingConstraints"
        android:background="@drawable/rounded_box3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/home"
        android:layout_width="137dp"
        android:background="@drawable/rounded_box4"
        android:layout_height="55dp"
        android:text="@string/home_button"
        android:layout_gravity="center_vertical|center_horizontal"
        app:layout_constraintLeft_toRightOf="@id/profile"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/new_message"
        android:layout_width="137dp"
        android:layout_height="55dp"
        android:background="@drawable/rounded_box2"
        android:text="@string/new_message"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>